--- a/hpa.yaml
+++ b/hpa.yaml
@@ -1,12 +1,12 @@
 apiVersion: autoscaling/v1
 kind: HorizontalPodAutoscaler
 metadata:
- name: pytest-dev
+ name: pytest-calculator
 spec:
  scaleTargetRef:
    apiVersion: apps/v1
    kind: Deployment
-   name: pytest-dev
+   name: pytest-calculator
  minReplicas: 1
  maxReplicas: 10
  targetCPUUtilizationPercentage: 50
